--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 <!-- Content Column -->
                 <div class="bg-white p-8 md:p-12 flex flex-col justify-center">
                     <h3 class="text-5xl font-bold text-gray-900 mb-6">
-                        WHO WE ARE?
+                        WHO WE ARE
                     </h3>
                     <p class="text-lg text-gray-600 leading-relaxed mb-6">
                         At Techosis, we specialize in crafting modern, responsive, and high-performance websites that
@@ -793,9 +793,9 @@
                             <a href="https://www.linkedin.com/in/mohamed-rizwan-r-769015324/"
                                 class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
-                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="lucide lucide-linkedin">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                    stroke="currentColor"
+                                    class="linkedin-icon w-24 h-24 text-gray-700 hover:text-blue-500 transition-colors duration-300">
                                     <path
                                         d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                                     <rect width="4" height="12" x="2" y="9" />
@@ -848,7 +848,7 @@
                                 with a passion for turning visions into visual realities. He specializes in creating
                                 modern, impactful designs that define our brand and connect with our audience on a
                                 deeper level.</p>
-                            <a href="https://www.linkedin.com/in/zzayir?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bs2BbR6tGQ%2BWDjKeAGhM78w%3D%3D" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -904,7 +904,7 @@
                             <p class="text-sm text-gray-800 font-medium mb-4 text-center">A data analyst is like a
                                 detective for a business. Your main job is to take raw, messy data and turn it into
                                 clear, actionable insights that help a company make smart decisions. </p>
-                            <a href="https://www.linkedin.com/in/pratyusha-kumar-pati?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BcrbFlMZNQa%2BxDCIgPMbdGw%3D%3D" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -925,7 +925,7 @@
                         <div class="flip-card-front">
                             <img src="SITHU.png" alt="New Member 4"
                                 class="w-48 h-48 rounded-full mx-auto object-cover border-4 border-gray-200 mb-6">
-                            <h5 class="text-xl font-bold text-gray-900 mb-1">SITHARTH</h5>
+                            <h5 class="text-xl font-bold text-gray-900 mb-1">SIDDHARTH</h5>
                             <p class="text-sm font-medium">BACK-END DEVELOPER</p>
                         </div>
                         <div class="flip-card-back">
@@ -933,7 +933,7 @@
                                 foundation. As a skilled back-end developer, he's responsible for the critical
                                 server-side logic and database architecture that brings our digital products to life.
                             </p>
-                            <a href="https://www.linkedin.com/in/sitharth-sithu-2135382a4/" class="inline-block text-gray-900 transition-colors duration-300">
+                            <a href="#" class="inline-block text-gray-900 transition-colors duration-300">
                                 <!-- LinkedIn SVG icon -->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -1556,7 +1556,7 @@
     </section>
 
 
-    <section id="contact" class="bg-white py-16">
+    <section id="contact" class="bg-white py-16 w-full">
         <div class="container mx-auto px-6">
             <div class="text-center mb-12">
                 <h3 id="Contact" class="text-3xl md:text-4xl font-extrabold text-gray-900 tracking-wide uppercase">
@@ -1572,7 +1572,7 @@
                     class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
                     <!-- Full Name -->
-                    <div class="col-span-1">
+                    <div class="col-span-1 md:col-span-1">
                         <label for="full-name" class="block text-sm font-medium text-gray-800">Full Name</label>
                         <input type="text" id="full-name" name="name" placeholder="Enter your full name"
                             class="mt-2 w-full p-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900"
@@ -1580,7 +1580,7 @@
                     </div>
 
                     <!-- Email -->
-                    <div class="col-span-1">
+                    <div class="col-span-1 md:col-span-1">
                         <label for="email-address" class="block text-sm font-medium text-gray-800">Email Address</label>
                         <input type="email" id="email-address" name="email" placeholder="Enter your email"
                             class="mt-2 w-full p-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900"
@@ -1588,14 +1588,14 @@
                     </div>
 
                     <!-- Phone -->
-                    <div class="col-span-1">
+                    <div class="col-span-1 md:col-span-1">
                         <label for="contact-number" class="block text-sm font-medium text-gray-800">Phone Number</label>
                         <input type="tel" id="contact-number" name="phone" placeholder="Optional"
                             class="mt-2 w-full p-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900">
                     </div>
 
                     <!-- Service Selection -->
-                    <div class="col-span-1">
+                    <div class="col-span-1 md:col-span-1">
                         <label for="service" class="block text-sm font-medium text-gray-800">Select a Service</label>
                         <select id="service" name="service"
                             class="mt-2 w-full p-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 bg-white text-gray-900"
@@ -1722,11 +1722,11 @@
                         <div class="pt-4">
                             <h4 class="text-xl font-semibold text-gray-900 mb-5">Follow Us</h4>
                             <div class="flex space-x-5">
-                                <a href="#"
+                                <a href="https://github.com/TECHOSIS"
                                     class="w-12 h-12 flex items-center justify-center rounded-full bg-white text-gray-700 shadow-lg">
                                     <i class="fab fa-github text-2xl"></i>
                                 </a>
-                                <a href="#"
+                                <a href="https://www.instagram.com/techosis.dev/"
                                     class="w-12 h-12 flex items-center justify-center rounded-full bg-white text-pink-600 shadow-lg">
                                     <i class="fab fa-instagram text-2xl"></i>
                                 </a>
@@ -1766,7 +1766,7 @@
                             <ul class="list-unstyled d-flex gap-3">
                                 <!-- Instagram -->
                                 <li>
-                                    <a href="https://www.instagram.com" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; 
+                                    <a href="https://www.instagram.com/techosis.dev/" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; 
                           width:40px; height:40px; background:#fff; border-radius:50%; 
                           box-shadow:0 2px 6px rgba(0,0,0,0.1); color:#ecad6f;">
                                         <svg width="20" height="20" viewBox="0 0 15 15">
@@ -1776,7 +1776,7 @@
                                 </li>
                                 <!-- LinkedIn -->
                                 <li>
-                                    <a href="https://www.linkedin.com" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; 
+                                    <a href="https://www.linkedin.com/company/techosisindian/?viewAsMember=true" target="_blank" style="display:inline-flex; align-items:center; justify-content:center; 
                           width:40px; height:40px; background:#fff; border-radius:50%; 
                           box-shadow:0 2px 6px rgba(0,0,0,0.1); color:#ecad6f;">
                                         <svg width="20" height="20" viewBox="0 0 15 15">
@@ -1922,5 +1922,3 @@
 
 
 </html>
-
-
